--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic",
     "requests",
     "sqlalchemy",
+    "types-requests>=2.32.0.20250306",
     "uvicorn",
 ]
 [tool.uv]
@@ -20,7 +21,7 @@ strict = true
 exclude = [".venv"]
 
 [tool.ruff]
-target-version = "py12"
+target-version = "py312"
 
 [tool.ruff.lint]
 select = [
